[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nvidia-gradio"
version = "0.0.1"
description = "A Python package for creating Gradio applications with NVIDIA NIM models"
authors = [
    { name = "AK", email = "ahsen.khaliq@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "gradio>=5.0.0b5",
    "openai",  # NVIDIA NIM uses the OpenAI client
]

[project.urls]
homepage = "https://github.com/AK391/nvidia-gradio"
repository = "https://github.com/AK391/nvidia-gradio"

[project.optional-dependencies]
dev = ["pytest"]

[tool.hatch.build.targets.wheel]
packages = ["nvidia_gradio"]

